# levante-bench

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  README.md  pilot_analyses.qmd  pyproject.toml  requirements-dev.txt  requirements-transformers.txt  requirements.txt  run_all_tasks.sh  run_experiment.sh  vercel.json
api/: human-age-accuracy.js  kl-report.js  model-age-equivalency-accuracy.js  model-age-equivalency.js  parser-glitch-report.js  results-report.js
comparison/: README.md  compare_levante.R  response_distribution.Rmd  stats-helper.R
configs/: experiment.yaml  experiment_aquila_production_full.yaml  experiment_aquila_stage2a_smoke.yaml  experiment_aquila_stage2b_full.yaml  experiment_aquila_vl.yaml  experiment_aquila_vl_checkpoint.yaml  experiment_gemma3_12b_full_safe.yaml  experiment_gemma3_12b_tom_safe.yaml  experiment_gemma3_12b_v1.yaml  experiment_gemma4_e2b_v1.yaml  experiment_gemma4_e4b_v1.yaml  experiment_gpt53_v1.yaml  experiment_internvl35.yaml  experiment_internvl35_1b_full_ultrasafe.yaml  experiment_internvl35_2b.yaml  experiment_internvl35_2b_nojson.yaml  experiment_internvl35_4b.yaml  experiment_internvl35_8b_trog_ultrasafe.yaml  experiment_internvl35_8b_vocab_ultrasafe.yaml  experiment_prompt_robustness.yaml  experiment_qwen35_2b.yaml  experiment_qwen35_4b.yaml  experiment_smolvlm2_256m_de.yaml  experiment_smolvlm2_256m_es_v1.yaml  experiment_smolvlm2_256m_upgrade_prompt.yaml  experiment_smolvlm2_256m_v1.yaml  experiment_smolvlm2_2p2b_v1.yaml  experiment_smolvlm2_500m.yaml  experiment_smolvlm2_500m_de.yaml  experiment_smolvlm2_500m_es_v1.yaml  experiment_smolvlm2_500m_v1.yaml  experiment_tinyllava_31b_full.yaml
docs/: README.md  (+7 more)
(+415 files in other folders)
